added line to clear search field

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<nav id="navbar">
-			<input id="inputSearch" type="search" placeholder="Enter a Pokemon" />
+			<input id="inputSearch" type="search" placeholder="Enter a Pokemon" onfocus="this.value=''" />
 			<button id="btn">Search</button>
 		</nav>
 		<div id="container"> </div>
