--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
 	</head>
 	<body>
 		<nav id="navbar">
-			<input id="inputSearch" type="search" placeholder="Enter a Pokemon" onfocus="this.value=''" />
+			<input
+				id="inputSearch"
+				type="search"
+				placeholder="Enter a Pokemon"
+				onfocus="this.value=''"
+			/>
 			<button id="btn">Search</button>
 		</nav>
+
 		<div id="container"> </div>
+
 		<!-- JQuery -->
 		<script
 			type="text/javascript"
